# bankcode_search_backend

./: .gitignore  Procfile  README.md  manage.py  procfile  pyproject.toml  requirement.txt  requirements.txt
apis/: admin.py  load_bank_data.py  models.py  serializers.py  urls.py  views.py
apis/management/commands/: load_bank_data.py
apis/migrations/: 0001_initial.py
bankcode/: .env.example  asgi.py  settings.py  urls.py  wsgi.py
static/datafile/: bank_code_data.csv
