[tool.poetry]
name = "bankcode"
version = "0.1.0"
description = ""
authors = ["Wheat Wu <hiw40143113@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.4.0"
django-environ = "^0.11.2"
psycopg2-binary = "^2.9.9"
requests = "^2.32.3"
gunicorn = "^22.0.0"
whitenoise = "^6.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
